@@ -6,9 +6,9 @@ PACKAGE_NAME = gnustep-corebase
 LIBRARY_NAME = libgnustep-corebase
 
 ADDITIONAL_INCLUDE_DIRS = -I../Headers
-ADDITIONAL_CFLAGS = -DBUILDING_SELF -DMAC_OS_X_VERSION_MAX_ALLOWED=100700
-ADDITIONAL_CXXFLAGS = -DBUILDING_SELF -DMAC_OS_X_VERSION_MAX_ALLOWED=100700
-ADDITIONAL_OBJCFLAGS = -DBUILDING_SELF -DMAC_OS_X_VERSION_MAX_ALLOWED=100700
+ADDITIONAL_CFLAGS = -DBUILDING_SELF
+ADDITIONAL_CXXFLAGS = -DBUILDING_SELF
+ADDITIONAL_OBJCFLAGS = -DBUILDING_SELF
 
 libgnustep-corebase_INTERFACE_VERSION = $(MAJOR_VERSION)
 
@@ -94,6 +94,7 @@ libgnustep-corebase_OBJC_FILES = \
   NSCFSet.m \
   NSCFLocale.m \
   NSCFDictionary.m \
+  NSCFTimeZone.m \
   NSCFType.m
 
 libgnustep-corebase_LIBRARIES_DEPEND_UPON += @LIBS@
